set(CMAKE_LEGACY_CYGWIN_WIN32 0)
set(CMAKE_SYSTEM_NAME Windows)

set(PROJECT_NAME "Stack")

if(${PROJECT_NAME} STREQUAL "Sample Project Name")
	message(AUTHOR_WARNING "No project name is set")
endif()

project(${PROJECT_NAME})
cmake_minimum_required(VERSION 2.8)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_BUILD_TYPE debug)

set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS "-std=c++14 -Werror -Wall -Wno-padded -Wno-switch-enum")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "-Ofast")

file(GLOB_RECURSE SOURCES "src/*.cpp")


file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/res COMMAND ln -s ${CMAKE_BINARY_DIR}/res ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_executable(${PROJECT_NAME} ${SOURCES})

